[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/ai_diagram/editor/ai_diagram_editor.gd" type="Script" id=1]
[ext_resource path="res://addons/ai_diagram/circleR.png" type="Texture" id=2]
[ext_resource path="res://addons/ai_diagram/circleW.png" type="Texture" id=3]
[ext_resource path="res://addons/ai_diagram/circleG.png" type="Texture" id=4]

[node name="ai_diagram_editor" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 100 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphEdit" type="GraphEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
right_disconnects = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0
items = [ "Entry", ExtResource( 3 ), 0, false, false, 0, 0, null, "", false, "Process", ExtResource( 3 ), 0, false, false, 1, 0, null, "", false, "If Pcs", ExtResource( 3 ), 0, false, false, 2, 0, null, "", false, "Random Selector", ExtResource( 3 ), 0, false, false, 3, 0, null, "", false, "Func", ExtResource( 2 ), 0, false, false, 4, 0, null, "", false, "Set Value", ExtResource( 2 ), 0, false, false, 5, 0, null, "", false, "Random Value", ExtResource( 2 ), 0, false, false, 6, 0, null, "", false, "Math", ExtResource( 2 ), 0, false, false, 7, 0, null, "", false, "Intercept", ExtResource( 4 ), 0, false, false, 8, 0, null, "", false, "Process Intercept", ExtResource( 4 ), 0, false, false, 9, 0, null, "", false, "If Pcs Intercept", ExtResource( 4 ), 0, false, false, 10, 0, null, "", false, "Random Selector Intercept", ExtResource( 4 ), 0, false, false, 11, 0, null, "", false, "Exit", ExtResource( 4 ), 0, false, false, 12, 0, null, "", false, "Clear", null, 0, false, false, 13, 0, null, "", false ]

[node name="Panel_start" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="btn_start" type="Button" parent="Panel_start"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.5
margin_top = -10.0
margin_right = 20.5
margin_bottom = 10.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer_update_resource" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="timer_remake_data" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="_end_node_move" from="GraphEdit" to="." method="_on_GraphEdit__end_node_move"]
[connection signal="connection_request" from="GraphEdit" to="." method="_on_GraphEdit_connection_request"]
[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_GraphEdit_disconnection_request"]
[connection signal="popup_request" from="GraphEdit" to="." method="_on_GraphEdit_popup_request"]
[connection signal="button_up" from="Panel_start/btn_start" to="." method="_on_btn_start_button_up"]
[connection signal="timeout" from="timer_update_resource" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="timer_remake_data" to="." method="_on_timer_remake_data_timeout"]
